Fixed some bugs, deleted unnecessary files
Fixed massive whitespace
Fixed error when no workspace selected
Made page not visible when no workspace is selected
Deleted files which are not needed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*CSS for top bar*/
 .top {
 	background-color:#e67e22;
 }
@@ -9,11 +10,18 @@
 	color:#ffffff;
 }
 
+/*CSS for container */
+.container {
+  background-color:grey;
+}
+
+/*CSS for navigation bar */
 .navPane {
 	height:800px;
 	width:200px;
 	background-color:#333333;
 	float:left;
+  position:fixed;
 }
 
 .navPane .navbar ul {
@@ -43,6 +51,8 @@
   padding-bottom: 12px;
 }
 
+/*CSS for each module box*/
+
 .thumbnail h3 {
   background-color:#e67e22;
   color:#ffffff;
@@ -57,18 +67,21 @@
   color:#000000;
 }
 
+/* CSS for workspace drop down */
 .select {
   float:left;
 }
 
-.new {
+/* CSS for adding new workspace */
+.newWorkspace {
   float:right;
 }
 
+/* CSS for checkboxes in module tab */
 .checkbox {
   color:white;
 }
 
-.container {
-  background-color:grey;
+.newModule {
+  float:left;
 }
